# metis

./: .env.example  .gitignore  README.md  cli.py  config.py  main.py  mcp_server.py  mcp_simple.py  pyproject.toml  requirements.txt  skill.md
collectors/: __init__.py  hackernews.py  reddit.py
generators/: __init__.py  idea_generator.py
metis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
processors/: __init__.py  cleaner.py  clusterer.py
storage/: __init__.py
